--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
 name: Starfall OS
-description: Personal Build Utilizing Kinoite, Bazzite, and Proton App Suite
+description: Personal Build Utilizing Kinoite, Bazzite, Proton App Suite, BleachBit, and Oculante
 
 # Use Kinoite as the base image
 base-image: ghcr.io/ublue-os/kinoite-main
@@ -24,22 +24,22 @@ modules:
       - plasma-desktop
       - dolphin
       - konsole
-      
+
       # Bazzite kernel and gaming tools for optimization
       - kernel-bazzite
       - vkBasalt
       - mangohud
-      
+
       # Zen Browser for lightweight browsing experience
       - zen-browser
-      
+
       # Proton App Suite (Mail, VPN, Calendar, Drive, Pass)
       - protonmail-desktop-beta.rpm
       - protonvpn-stable-release-1.0.3-1.noarch.rpm
       - proton-calendar.rpm
       - proton-drive.rpm
       - protonpass.rpm
-      
+
     remove:
       # Remove Thunderbird in favor of Proton Mail Suite
       - thunderbird
@@ -52,13 +52,11 @@ modules:
         - com.valvesoftware.Steam # Gaming platform
         - net.lutris.Lutris # Game launcher/manager
         - org.freedesktop.Platform.VulkanLayer.MangoHud
-    user:
-      repo-url: https://dl.flathub.org/repo/flathub.flatpakrepo # Flathub URL for user-level Flatpaks
-      repo-name: flathub # Name of the Flatpak repository
+        - net.bleachbit.bleachbit
+        - io.github.woelper.Oculante
 
 signing:
   type: signing # Sets up policy & signing files for signed images to work fully
 
 alt-tags:
   - lightweight-kde-gaming-os
-
